--- a/ze/tracer_ze.sh.in
+++ b/ze/tracer_ze.sh.in
@@ -17,6 +17,15 @@ whichlib() {
                match($1, "^lib") && match($1, p) { print header "/" $1}'
 }
 
+whichlib64() {
+  for lib in $(whichlib $1)
+  do
+    if objdump -a $lib | grep 64 > /dev/null; then
+      echo $lib
+    fi
+  done
+}
+
 while true; do
   case "$1" in
     -p | --profiling ) shift; profiling=1; export LTTNG_UST_ZE_PROFILE=1;;
@@ -49,7 +58,7 @@ then
 fi
 if [ -z "$LTTNG_UST_ZE_LIBZE_LOADER" ]
 then
-  export LTTNG_UST_ZE_LIBZE_LOADER=$(whichlib libze_loader.so | head -n 1)
+  export LTTNG_UST_ZE_LIBZE_LOADER=$(whichlib64 libze_loader.so | head -n 1)
 fi
 export LTTNG_UST_ALLOW_BLOCKING=1
 export LD_PRELOAD=$libdir/libTracerZE.so:$LD_PRELOAD
