Add templated files

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -3,7 +3,8 @@ noinst_HEADERS = \
 	include/utarray.h \
 	include/uthash.h \
 	include/utlist.h \
-	tests_template/interval_profiling_block.yaml.erb 
+	tests_template/interval_profiling_block.yaml.erb \
+	tests_template/profiling_block.yaml.erb 
 
 nodist_noinst_HEADERS = lttng/tracepoint_gen.h xprof_utils.h xprof.sh.erb
 
