--- a/ze/Makefile.am
+++ b/ze/Makefile.am
@@ -82,7 +82,8 @@ ZE_EXTRA_HDR = \
 	$(srcdir)/include/loader/ze_loader_api.h \
 	$(srcdir)/include/layers/zel_tracing_api.h \
 	$(srcdir)/include/layers/zel_tracing_ddi.h \
-	$(srcdir)/include/layers/zel_tracing_register_cb.h
+	$(srcdir)/include/layers/zel_tracing_register_cb.h \
+	$(srcdir)/include/loader/ze_loader.h
 ZE_HDR = \
 	$(srcdir)/include/ze_api.h \
 	$(ZE_EXTRA_HDR)
@@ -96,7 +97,8 @@ MODIFIED_ZE_EXTRA_HDR = \
 	modified_include/loader/ze_loader_api.h \
 	modified_include/layers/zel_tracing_api.h \
 	modified_include/layers/zel_tracing_ddi.h \
-	modified_include/layers/zel_tracing_register_cb.h
+	modified_include/layers/zel_tracing_register_cb.h \
+	modified_include/loader/ze_loader.h
 MODIFIED_ZE_HDR = \
 	modified_include/ze_api.h \
 	$(MODIFIED_ZE_EXTRA_HDR)
