--- a/cuda/cuda_export_tables.yaml
+++ b/cuda/cuda_export_tables.yaml
@@ -1,9 +1,9 @@
 ---
 - uuid: [0x6e, 0x16, 0x3f, 0xbe, 0xb9, 0x58, 0x44, 0x4d, 0x83, 0x5c, 0xe1, 0x82, 0xaf, 0xf1, 0x99, 0x1e]
   structures:
-  - name: CUfunction_arg_desc_query
+  - name: cuexp_function_arg_desc_query
     declaration: |
-      struct CUfunction_arg_desc_query_st {
+      struct cuexp_function_arg_desc_query_st {
         size_t sz;
         size_t argSize;
         size_t argOffset;
@@ -13,13 +13,13 @@
   functions:
   - offset: 0xd8
     name: cuexp_6e163fbe_d8
-    declaration: "CUresult cuexp_6e163fbe_d8(void *a, int *pB)"
+    declaration: "CUresult cuexp_6e163fbe_d8(CUmodule hModule, int *pB)"
   - offset: 0x108
     name: cuexpFunction_get_arg_count
     declaration: "CUresult cuexpFunction_get_arg_count(CUfunction f, size_t *pArgCount)"
   - offset: 0x110
     name: cuexpFunction_get_arg_descriptor
-    declaration: "CUresult cuexpFunction_get_arg_descriptor(CUfunction f, size_t argIndex, CUfunction_arg_desc_query *pArgDescQuery)"
+    declaration: "CUresult cuexpFunction_get_arg_descriptor(CUfunction f, size_t argIndex, cuexp_function_arg_desc_query *pArgDescQuery)"
   - offset: 0x130
     name: cuexp_6e163fbe_130
     declaration: "CUresult cuexp_6e163fbe_130(void **pA, void *b)"
@@ -84,19 +84,31 @@
     name: cuexpContext_getDevice
     declaration: "CUresult cuexpContext_getDevice(CUcontext hContext, CUdevice *pDevice)"
   - offset: 0x20
-    name: cuexp_21318c60_20
-    declaration: "CUresult cuexp_21318c60_20(void *a, void **pB)"
+    name: cuexpContext_getContextNumber
+    declaration: "CUresult cuexpContext_getContextNumber(CUcontext hContext, unsigned long *contextNumber)"
+  - offset: 0x80
+    name: cuexp_21318c60_80
+    declaration: "CUresult cuexp_21318c60_80(void *a,void **pB)"
   - offset: 0x138
     name: cuexp_21318c60_138
-    declaration: "CUresult cuexp_21318c60_138(void *a, void *b, void **pC)"
+    declaration: "CUresult cuexp_21318c60_138(CUcontext hContext, void *b, void **pC)"
 - uuid: [0xb1, 0x05, 0x41, 0xe1, 0xf7, 0xc7, 0xc7, 0x4a, 0x9f, 0x64, 0xf2, 0x23, 0xbe, 0x99, 0xf1, 0xe2]
   functions:
   - offset: 0x8
     name: cuexpDevice_get
     declaration: "CUresult cuexpDevice_get(CUdevice *pDevice, int ordinal)"
+  - offset: 0x10
+    name: cuexpDevice_getCount
+    declaration: "CUresult cuexpDevice_getCount(unsigned int *pCount)"
   - offset: 0x28
     name: cuexpDevice_getAttribute
     declaration: "CUresult cuexpDevice_getAttribute(int ordinal,CUdevice_attribute attrib,int flag,long *pl)"
+  - offset: 0x30
+    name: cuexp_b10541e1_30
+    declaration: "CUresult cuexp_b10541e1_30(CUdevice device, void **pB)"
+  - offset: 0x40
+    name: cuexp_b10541e1_40
+    declaration: "CUresult cuexp_b10541e1_40(unsigned int *pRes, CUdevice device)"
 - uuid: [0xa6, 0xb1, 0xff, 0x99, 0xec, 0xc4, 0xc9, 0x4f, 0x92, 0xf9, 0x19, 0x28, 0x66, 0x3d, 0x55, 0x85]
   functions:
   - offset: 0x28
@@ -110,3 +122,34 @@
   - offset: 0x30
     name: cuexp_127d4831_30
     declaration: "CUresult cuexp_127d4831_30(void *h, int a, void **pB)"
+- uuid: [0x7c, 0xb6, 0x3f, 0x9b, 0x9c, 0xa4, 0x8e, 0x42, 0xa4, 0x84, 0xbe, 0xb6, 0x6e, 0x6a, 0xed, 0x7f]
+  structures:
+  - name: cuexp_7cb63f9b_1e0_struct
+    declaration: |
+      struct cuexp_7cb63f9b_1e0_struct_st {
+        int unknown;
+        unsigned int stride;
+        unsigned int countOut;
+        unsigned int capacity;
+        void *data;
+      }
+  functions:
+  - offset: 0x100
+    name: cuexpCUPTI_init
+    declaration: "CUresult cuexpCUPTI_init(void)"
+  - offset: 0x1e0
+    name: cuexp_7cb63f9b_1e0
+    declaration: "CUresult cuexp_7cb63f9b_1e0(CUdevice device, cuexp_7cb63f9b_1e0_struct *b)"
+- uuid: [0x2c, 0x8e, 0x0a, 0xd8, 0x07, 0x10, 0xab, 0x4e, 0x90, 0xdd, 0x54, 0x71, 0x9f, 0xe5, 0xf7, 0x4b]
+  functions:
+  - offset: 0x18
+    name: cuexp_2c8e0ad8_18
+    declaration: "CUresult cuexp_2c8e0ad8_18(int *pRes,void *a,void *b)"
+  - offset: 0x38
+    name: cuexp_2c8e0ad8_38
+    declaration: "CUresult cuexp_2c8e0ad8_38(int a, int b, unsigned int c)"
+- uuid: [0xd7, 0xbd, 0x8a, 0xf8, 0xe7, 0xac, 0xca, 0x4a, 0xbd, 0xbc, 0xfb, 0x1f, 0x1b, 0x3f, 0xcf, 0x33]
+  functions:
+  - offset: 0x18
+    name: cuexp_getCudaState
+    declaration: "CUresult cuexp_getCudaState(int *pState)"
